# ferris.land

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
git/: Cargo.toml
git/src/: main.rs  ssh.rs
git/static/: main.css
git/templates/: index.html.tera  layout.html.tera  nav.html.tera
src/: app.rs  config.rs  main.rs
