[package]
name = "ferrisland"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.19"
dotenvy = "0.15.7"
hyper = "0.14.27"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-forest = { version = "0.1.6", features = ["ansi"] }
tracing-subscriber = "0.3.17"
