[package]
name = "ferrisland-git"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
russh = "0.34.0-beta.16"
russh-keys = "0.22.0-beta.7"
anyhow = "1.0.65"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
